Make compatible with PET source code

--- a/templates/train.html
+++ b/templates/train.html
@@ -1,7 +1,7 @@
 
     <html>
         <body>
-            Training done!
+            Training done!<hr><a href=http://127.0.0.1:8000/results><button>See Results</button></a>
         </body>
     </html>
     
