Add click on function

--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@ fileUploader.addEventListener('change', (event) => {
                                 </label>
                             </div>
                         </div>
-                        <button class="btn btn--radius-2 btn--red" type="submit">Send</button><br><br>
+                        <button class="btn btn--radius-2 btn--red" type="submit">Continue</button><br><br>
                     </form>
                 </div>
             </div>
