--- a/templates/next.html
+++ b/templates/next.html
@@ -24,7 +24,62 @@
 
     <!-- Main CSS-->
     <link href="static/css/main.css" rel="stylesheet" media="all">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
 </head>
+ <script>
+     function startTraining() {
+         const logList = document.getElementById("logList");
+         logList.innerHTML = "<li>Training Started</li>"; // display "Training Started" message
+         setInterval(refreshLog, 10000); // refresh the log every 10 seconds
+     }
+
+     function refreshLog() {
+         fetch("/log")
+                 .then(response => response.json())
+                 .then(data => {
+                     const logList = document.getElementById("logList");
+                     data.log.forEach(line => {
+                         const li = document.createElement("li");
+                         li.textContent = line;
+                         logList.appendChild(li);
+                     });
+                 });
+     }
+ </script>
+
+ <script type="text/javascript">
+  $(function() {
+          $('a#test').on('click', function(e) {
+            e.preventDefault()
+            $.getJSON('/logging/start_train',
+                function(data) {
+              //do nothing
+            });
+            return false;
+          });
+        });
+ </script>
+
+ <style>
+     #logList {
+         height: 100px;
+         overflow: auto;
+     }
+ </style>
+<script>
+      function redirect() {
+        window.location.href = "/final";
+      }
+    </script>
+<script>
+    function runPythonCode() {
+        fetch('/cleanup').then(response => {
+            console.log('Python code executed successfully');
+            window.location.href = '/basic';
+        });
+    }
+</script>
 
 <body>
     <div class="page-wrapper bg-gra-03 p-t-45 p-b-50">
@@ -33,11 +88,13 @@
                 <div class="card-heading">
                     <h2 class="title">Train Your PET Model</h2>
                 </div>
-                <div class="card-body"id = "container">
-                      <button class="btn btn--radius-2 btn--red" id="progress-bar-trigger">Start Training</button>
-  <div id="progress-bar" style="background-color: blue; width: 0%;">&nbsp;</div>
-  <div id="progress-bar-message">Waiting for progress to start...</div>
-</div>
+                     <div class="card-body" id="container">
+      <a href="#" id="test">
+       <button onclick="startTraining()" class="btn btn--radius-2 btn--red">
+        Start Training
+       </button>
+       <ul id="logList"></ul>
+      </a>
 <script>
 function updateProgress(progressBarElement, progressBarMessageElement, progress) {
   progressBarElement.style.width = progress.percent + "%";
@@ -73,7 +130,13 @@ text-align: start;
 
   <p id='showData'></p>
   <p id='msg'></p>
+<script>
+    const button = document.getElementById("another");
 
+button.addEventListener("click", function() {
+  window.location.href = "/final";
+});
+</script>
 
 <script>
   let tableFromJson = () => {
@@ -142,11 +205,11 @@ text-align: start;
                             </div>
                         </div>
                             <div class="card-body" id="container">
-                                <button class="btn btn--radius-2 btn--red" id="mycontain">Run with new configuration</button>
+                                <button class="btn btn--radius-2 btn--red" id="mycontain" onclick="runPythonCode()">Run with new configuration</button>
                             </div>
                             <p style="font-size:50px;" align="center">Or</p>
                             <div class="card-body" id="container">
-                                <button class="btn btn--radius-2 btn--red" id="mycontain">Annotate unseen data</button>
+                                <button class="btn btn--radius-2 btn--red" id="another" onclick="redirect()">Annotate unseen data</button>
                             </div>
                 </div>
             </div>
