--- a/templates/next.html
+++ b/templates/next.html
@@ -47,6 +47,19 @@
                  });
      }
  </script>
+    <script>
+      async function downloadFile() {
+        const response = await fetch("/download");
+        const blob = await response.blob();
+        const url = URL.createObjectURL(blob);
+        const link = document.createElement("a");
+        link.href = url;
+        link.download = "logging.txt";
+        document.body.appendChild(link);
+        link.click();
+        link.remove();
+      }
+    </script>
 
  <script type="text/javascript">
   $(function() {
@@ -125,8 +138,9 @@ text-align: start;
 </style>
 
   <div class="card-body" id="container">
-      <input class="btn btn--radius-2 btn--red" type='button' onclick='tableFromJson()'
-         value='Show' />
+       <button onclick="downloadFile()" class="btn btn--radius-2 btn--red">
+         Download Result
+      </button>
 
   <p id='showData'></p>
   <p id='msg'></p>
