update code for second page

--- a/templates/next.html
+++ b/templates/next.html
@@ -27,11 +27,11 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 </head>
+
  <script>
      function startTraining() {
          const logList = document.getElementById("logList");
          logList.innerHTML = "<li>Training Started</li>"; // display "Training Started" message
-         setInterval(refreshLog, 10000); // refresh the log every 10 seconds
      }
 
      function refreshLog() {
@@ -54,7 +54,7 @@
         const url = URL.createObjectURL(blob);
         const link = document.createElement("a");
         link.href = url;
-        link.download = "logging.txt";
+        link.download = "results.json";
         document.body.appendChild(link);
         link.click();
         link.remove();
@@ -67,11 +67,13 @@
             e.preventDefault()
             $.getJSON('/logging/start_train',
                 function(data) {
-              //do nothing
+              refreshLog();
             });
             return false;
           });
         });
+  setInterval(refreshLog, 3000);
+
  </script>
 
  <style>
