--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Colorlib Templates">
 
     <!-- Title Page-->
-    <title>Train Your PET Model</title>
+    <title>Predict Unlabeled Data</title>
 
     <!-- Icons font CSS-->
     <link href="static/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
