update final page

--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -31,7 +31,7 @@
         <div class="wrapper wrapper--w790">
             <div class="card card-5">
                 <div class="card-heading">
-                    <h2 class="title">Train Your PET Model</h2>
+                    <h2 class="title">Predict Unlabeled Data</h2>
                 </div>
                 <style>
 #container {
@@ -67,7 +67,7 @@ text-align: start;
     xhr.send(formData);
 });
                 </script>
-                            <p style="font-size:50px;" align="center">Or</p>
+
                             <div class="card-body" id="container">
                                 <button class="btn btn--radius-2 btn--red" id="mycontain">Predict labels using PET Model</button>
                             </div>
