--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -71,6 +71,10 @@ text-align: start;
                             <div class="card-body" id="container">
                                 <button class="btn btn--radius-2 btn--red" id="mycontain">Predict labels using PET Model</button>
                             </div>
+
+                                            <div class="card-body" id="container">
+                                <button class="btn btn--radius-2 btn--red" id="mycontain">Download Predicted data</button>
+                            </div>
                 </div>
             </div>
         </div>
