--- a/templates/login.html
+++ b/templates/login.html
@@ -9,14 +9,19 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="mt-5">Login</h1>
+    <h1 class="mt-5">PETGUI - Login</h1>
+     <small class="mb-4">Please enter your login information (ldap uid and password) for the DieterichLab server: cluster.dieterichlab.org</small>
     {% if error %}
         <div class="alert alert-danger">{{ error }}</div>
     {% endif %}
     <form method="POST" action="/login" class="mt-4">
         <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" required>
+            <label for="username">username</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="mmustermann" required>
+        </div>
+        <div class="form-group">
+            <label for="password">password</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="iqu1TMWCEw1gWvr7" required>
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
